--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/PatrickAngrezani/teachable-machine-tutorial#readme",
   "dependencies": {
-    "node": "^18.20.2"
+    "node": "^18.20.2",
+    "@tensorflow/tfjs-node": "^4.18.0"
   }
 }
